--- a/report/TIPPRA1.bib
+++ b/report/TIPPRA1.bib
@@ -99,7 +99,7 @@
 }
 
 @online{block9,
-	author={El Observatorio Social de la Fundación ”la Caixa”},
+	author={El Observatorio Social de la Fundación "la Caixa"},
 	url={https://elobservatoriosocial.fundacionlacaixa.org/documents/22890/492074/T01_ID_ES_AyalaCant%C3%B3.pdf/a0746431-109f-e009-6c77-296c378f0438?t=1642072938395},
 	title={Radiografía de medio siglo de desigualdad en España},
 	date={2022-01},
@@ -141,7 +141,7 @@
 @online{block14,
 	author={Miguel Ángel {Gisbert}},
 	url={https://www.youtube.com/watch?v=2UyJv5oe570},
-	title={🗣 Cómo Encontrar CASAS Baratas - Parte 1: Scrapear datos de IDEALISTA 🐍},
+	title={Cómo Encontrar CASAS Baratas - Parte 1: Scrapear datos de IDEALISTA},
 	date={2021-06-24},
 	urldate={2022-04-04},
 }
@@ -151,11 +151,11 @@
 	url={https://www.youtube.com/watch?v=4Tv73KuqgVo},
 	title={Scraping Spanish real estate properties from idealista.com | REAL WORLD project | Python SCRAPY},
 	date={2020-05-23},
-	urldate={2022-04-1},
+	urldate={2022-04-01},
 }
 
 @online{block16,
-	author={Irene {Fernández Molina}} {Héctor {Hernández Membiela}},
+	author={Irene {Fernández Molina} and Héctor {Hernández Membiela}},
 	url={https://github.com/EdelBlau/PEC_TPC},
 	title={PEC TPC},
 	date={2019-04-15},
